some minor tweaks
Former-commit-id: 73cea662424789a75ce74d582a938f33a9187757

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -46,21 +46,22 @@ newgui loading [
 			textlogo
 			guistrut 1
 			guifont "super"
-			if (> (gamemode) 0) [
-				if (strlen $maptitle) [ guitext $maptitle ] [ guitext "Please Wait" ]
-				guifont "default"
-				if (strlen $mapauthor) [ guilist [ guistrut 3; guitext (format "by %1" $mapauthor) ] ] [ guistrut 2 ]
-				guifont
-				guifont "sub"
-				guitext (gamename (gamemode) (mutators))
-				guifont
-			] [ guitext "Please Wait"; guistrut 3 ]
+				if (&& (> (gamemode) 0) (strlen $maptitle)) [ guitext $maptitle ] [ guitext "Please Wait" ]
+			guifont
+			guifont "default"
+				guilist [
+					guistrut 3;
+					if (&& (> (gamemode) 0) (strlen $mapauthor)) [ guitext (format "by %1" $mapauthor) ] [ guitext " " ]
+				]
+			guifont
+			guifont "sub"
+				if (> (gamemode) 0) [ guitext (gamename (gamemode) (mutators)) ] [ guitext " " ]
 			guifont
 			guistrut 2
 			guilist [
 				guistrut 32
 				guifont "default"
-				guiprogress $progressamt 4
+				guiprogress $progressamt 3
 				guifont
 			]
 		]
