--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -3,14 +3,10 @@
 bind ESCAPE [if (cleargui 1) [] [showgui main]]    // it all starts here
 
 textlogo = [
-	guifont "super"
-	guitext "^faBlood Frontier"
-	guifont
+	guifont "super" [ guitext "^faBlood Frontier" ]
 	guilist [
 		guistrut 5
-		guifont "sub"
-		guitext "^fdIt's Bloody Fun!"
-		guifont
+		guifont "sub" [ guitext "^fdIt's Bloody Fun!" ]
 	]
 ]
 
@@ -45,24 +41,22 @@ newgui loading [
 		guilist [
 			textlogo
 			guistrut 1
-			guifont "super"
+			guifont "super" [
 				if (&& (> (gamemode) 0) (strlen $maptitle)) [ guitext $maptitle ] [ guitext "Please Wait" ]
-			guifont
-			guifont "default"
+			]
+			guifont "default" [
 				guilist [
 					guistrut 3;
 					if (&& (> (gamemode) 0) (strlen $mapauthor)) [ guitext (format "by %1" $mapauthor) ] [ guitext " " ]
 				]
-			guifont
-			guifont "sub"
+			]
+			guifont "sub" [
 				if (> (gamemode) 0) [ guitext (gamename (gamemode) (mutators)) ] [ guitext " " ]
-			guifont
+			]
 			guistrut 2
 			guilist [
 				guistrut 32
-				guifont "default"
-				guiprogress $progressamt 3
-				guifont
+				guifont "default" [ guiprogress $progressamt 3 ]
 			]
 		]
 	]
@@ -138,12 +132,8 @@ newgui about [
 		guilist [
 			textlogo
 			guistrut 1
-			guifont "emphasis"
-			guitext "(C) 2006-2009"
-			guifont
-			guifont "default"
-			guitext [Anthony Cord and Quinton Reeves]
-			guifont
+			guifont "emphasis" [ guitext "(C) 2006-2009" ]
+			guifont "default" [ guitext [Anthony Cord and Quinton Reeves] ]
 			guitext "http://bloodfrontier.com/"
 			guistrut 1
 			guitext "Based on Cube Engine 2 (C) 2001-2009"
@@ -172,6 +162,8 @@ newgui help [
 		]
 	]
 ]
+
+newgui test [guilist [loop i 20 [guilist [loop j 20 [textlogo]]]]]
 
 showngamegui = 0
 mapselected = 0
@@ -286,8 +278,8 @@ newgui game [
 	guistayopen [
 		guilist [
 			guilist [
-				guifont "default"; guitext (gamename $modeselected $mutsselected); guifont
-				guilist [ guitext (format "%1selected on " $gray); guifont "default"; guitext $mapcur; guifont; ]
+				guifont "default" [ guitext (gamename $modeselected $mutsselected) ]
+				guilist [ guitext (format "%1selected on " $gray); guifont "default" [ guitext $mapcur ] ]
 				guistrut 1
 				guilist [
 					guilist [
@@ -343,9 +335,9 @@ newgui game [
 					guistrut 7
 					guiimage "textures/conopen" [@(format "start %1 %2 %3" $mapcur $modeselected $mutsselected)] 1
 					guistrut 1
-					guifont "super"
-					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
-					guifont
+					guifont "super" [
+						guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected)
+					]
 				] 
 				guilist [
 					nummaps = (listlen $maplist)
