variable length entity attributes
Former-commit-id: 5620c3e704c139ba4b7121debcc42aeed56d6a11

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -74,15 +74,19 @@ delta_edit_1		= [ gridpower (+ $arg1 $gridpower) ]; setcomplete delta_edit_1 off
 delta_edit_2		= [ editfacewentpush $arg1 0 ]; setcomplete delta_edit_2 off // push face/corners selected
 delta_edit_3		= [ editfacewentpush $arg1 2 ]; setcomplete delta_edit_3 off // push corner pointed at by cursor
 delta_edit_4		= [ editrotate $arg1 ]; setcomplete delta_edit_4 off // rotate 90 degrees
-delta_edit_5		= [ entproperty 0 $arg1 ]; setcomplete delta_edit_5 off  // and the others
+delta_edit_5		= [ entproperty 1 $arg1 ]; setcomplete delta_edit_5 off  // and the others
 delta_edit_6		= [ edittex $arg1 ]; setcomplete delta_edit_6 off // change textures
 delta_edit_9		= [ selectbrush $arg1 ]; setcomplete delta_edit_9 off // change heightmap brushes
 delta_edit_10		= [ entautoview $arg1 ]; setcomplete delta_edit_10 off
-delta_edit_11		= [ entproperty 0 $arg1 ]; setcomplete delta_edit_11 off
-delta_edit_12		= [ entproperty 1 $arg1 ]; setcomplete delta_edit_12 off
-delta_edit_13		= [ entproperty 2 $arg1 ]; setcomplete delta_edit_13 off
-delta_edit_14		= [ entproperty 3 $arg1 ]; setcomplete delta_edit_14 off
-delta_edit_15		= [ entproperty 4 $arg1 ]; setcomplete delta_edit_15 off
+delta_edit_11		= [ entproperty 1 $arg1 ]; setcomplete delta_edit_11 off
+delta_edit_12		= [ entproperty 2 $arg1 ]; setcomplete delta_edit_12 off
+delta_edit_13		= [ entproperty 3 $arg1 ]; setcomplete delta_edit_13 off
+delta_edit_14		= [ entproperty 4 $arg1 ]; setcomplete delta_edit_14 off
+delta_edit_15		= [ entproperty 5 $arg1 ]; setcomplete delta_edit_15 off
+delta_edit_16		= [ entproperty 6 $arg1 ]; setcomplete delta_edit_16 off
+delta_edit_17		= [ entproperty 7 $arg1 ]; setcomplete delta_edit_17 off
+delta_edit_18		= [ entproperty 8 $arg1 ]; setcomplete delta_edit_18 off
+delta_edit_19		= [ entproperty 9 $arg1 ]; setcomplete delta_edit_19 off
 
 bind W				[ forward ]
 bind A				[ left ]
@@ -151,6 +155,8 @@ editbind F4			[ calclight 3 ]
 editbind F5			[ recalc ]
 editbind F6			[ savemap ]
 editbind F7			[ showgui findent ]
+editbindvar F8		entselsnap
+editbind F9			[ changeoutline 1 ]
 
 bind 1				[ weapon 0 ]
 bind 2				[ weapon 1 ]
@@ -167,10 +173,10 @@ editbind 2 			[ domodifier 12 ]
 editbind 3 			[ domodifier 13 ]
 editbind 4 			[ domodifier 14 ]
 editbind 5 			[ domodifier 15 ]
-editbindvar 6		entselsnap
-editbind 7			[ changeoutline 1 ]
-editbindvar 8		wireframe
-editbindvar 9		bypassheightmapcheck
+editbind 6 			[ domodifier 16 ]
+editbind 7 			[ domodifier 17 ]
+editbind 8 			[ domodifier 18 ]
+editbind 9 			[ domodifier 19 ]
 editbindvar 0		allfaces
 editbindvar K		blankgeom
 editbind C			[ domodifier 9 ]
@@ -179,11 +185,12 @@ editbind INSERT 	[ sendmap ]
 editbind DELETE		[ getmap ]
 
 editbind LSHIFT		[ floatspeed 300; modscale = 10; onrelease [ floatspeed 75; modscale = 1; ] ]
-editbindmod LCTRL	passthrough
+editbindmod LCTRL	[ passthroughsel 1; passthroughcube 1; onrelease [ passthroughsel 0; passthroughcube 0 ] ]
 editbind LALT		[ hmapedit; blendpaintmode 0 ]
+
 gridbindstyle = 2
 gridbindswitch = 0
-editbind TAB [
+togglegridbind = [
 	if (= $gridbindstyle 2) [
 		if (= $gridbindswitch 3) [ showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0 ] [
 			if (= $gridbindswitch 2) [ showpastegrid 0; showcursorgrid 0; showselgrid 1; gridbindswitch = 3 ] [
@@ -204,6 +211,7 @@ editbind TAB [
 		showpastegrid 1; showcursorgrid 1; showselgrid 1; onrelease [ showpastegrid 0; showcursorgrid 0; showselgrid 0 ]
 	]
 ]
+editbind TAB 		[ togglegridbind ]
 
 bind MOUSE4			[ universaldelta 1 ]	// also used for editing, see below
 bind MOUSE5			[ universaldelta -1 ]
@@ -239,8 +247,6 @@ editbind COMMA  	[ domodifier 10; onrelease entautoview ]
 
 editbind PERIOD		selentedit
 
-//editbindvar P 		dropwaypoints //ye olde P bind
-
 paintmodes = ["off" "overwrite blendmap" "merge blendmap" "max opacity to brush's" "inverted merge" "opacity multiplier (erasing)"]
 
 editbind P [
@@ -262,19 +268,17 @@ enttypelist = [
 	envmap
 	particles
 	sound
-	spotlight
+	lightfx
+	sunlight
 	weapon
 	teleport
-	monster
+	actor
 	trigger
 	pusher
-	base
+	flag
 	checkpoint
 	camera
 	waypoint
-	announcer
-	trigger
-	connection
 ]
 
 entcomplete = [ listcomplete $arg1 $enttypelist ]
@@ -290,33 +294,14 @@ enttypeselect = [
   if (< $next 0)  [ next = (- $n 1) ]
   if (= $next $n) [ next = 0 ]
   next = (at $enttypelist $next)
-  entset $next (ea 0) (ea 1) (ea 2) (ea 3) 
+  entset $next (ea 1) (ea 2) (ea 3) (ea 4) (ea 5) (ea 6)
 ]
-
-////// Entity primary actions /////////
-
-ent_action_base           = [ entproperty 0 ( * $arg1 1 ) ]
-ent_action_teleport       = [ entproperty 0 ( * $arg1 1 ) ]
-ent_action_monster        = [ entproperty 1 ( * $arg1 1 ) ]
-ent_action_mapmodel       = [ entproperty 0 ( * $arg1 1 ) ]
-ent_action_spotlight      = [ entproperty 0 ( * $arg1 5 ) ]
-ent_action_light          = [ entproperty 0 ( * $arg1 5 ) ]
-ent_action_pusher         = [ entproperty 0 ( * $arg1 5 ) ]
-ent_action_checkpoint     = [ entproperty 0 ( * $arg1 15 ) ]
-ent_action_playerstart    = [ entproperty 0 ( * $arg1 15 ) ]
-ent_action_envmap         = [ entproperty 0 ( * $arg1 5 ) ]
-ent_action_particles      = [ entproperty 0 ( * $arg1 1 ) ]
-ent_action_sound          = [ entproperty 0 ( * $arg1 1 ) ]
-ent_action_cycle          = [ entset ( if ( > $arg1 -1 ) [ result $arg2 ] [ result $arg3 ] ) ]
 
 exec "menus.cfg" // keep this here, it uses some of the stuff above
 
 specbind LSHIFT		[ floatspeed 500; onrelease [ floatspeed 75 ] ]
 specbind MOUSE1		[ specmodeswitch ]
 specbind MOUSE2		[ spectator 0 ]
-//specbind MOUSE4	[ specfollow 1 ]
-//specbind MOUSE5	[ specfollow -1 ]
-
 waitbind LSHIFT		[ floatspeed 500; onrelease [ floatspeed 75 ] ]
 
 musicfiles = [
