--- a/data/engine.cfg
+++ b/data/engine.cfg
@@ -23,7 +23,7 @@ ladder = [ editmat ladder ]
 et = [ at (entget) 0 ]
 
 // access the given attribute of selected ent
-ea = [ at (entget) (+ $arg1 1) ]
+ea = [ at (entget) $arg1 ]
 
 // clear ents of given type
 clearents = [ 
@@ -40,7 +40,7 @@ clearents = [
 replaceents = [
   if $editing [
     entfind @(entget)
-    entset @arg1 @arg2 @arg3 @arg4 @arg5 @arg6
+    entset @arg1 @arg2 @arg3 @arg4 @arg5 @arg6 @arg7 @arg8 @arg9
     echo Replaced (enthavesel) entities  
   ]
 ]
@@ -54,13 +54,17 @@ selentfindall   = [ do [ @( concatword "entfind " (entget) ) ] ]
 // arg2 value
 entproperty = [
   entloop [
-    a0 = (ea 0)
     a1 = (ea 1)
     a2 = (ea 2)
     a3 = (ea 3)
     a4 = (ea 4)
+    a5 = (ea 5)
+    a6 = (ea 6)
+    a7 = (ea 7)
+    a8 = (ea 8)
+    a9 = (ea 9)
     do [a@arg1 = (+ (ea @arg1) @arg2)]
-    entset (et) $a0 $a1 $a2 $a3 $a4
+    entset (et) $a1 $a2 $a3 $a4 $a5 $a6 $a7 $a8 $a9
   ]
 ]
 
@@ -138,15 +142,15 @@ entfind    = [
   if (= ($numargs) 1) [
     entselect     [ equaltype @@arg1 ]     
   ] [ if (= ($numargs) 2) [
-    entselect [ && (equaltype @@arg1)         [equalattr 0 @@arg2] ]
+    entselect [ && (equaltype @@arg1)         [equalattr 1 @@arg2] ]
   ] [ if (= ($numargs) 3) [
-    entselect [ && (equaltype @@arg1) (&&     [equalattr 0 @@arg2] [equalattr 1 @@arg3]) ]
+    entselect [ && (equaltype @@arg1) (&&     [equalattr 1 @@arg2] [equalattr 2 @@arg3]) ]
   ] [ if (= ($numargs) 4) [
-    entselect [ && (equaltype @@arg1) (&& (&& [equalattr 0 @@arg2] [equalattr 1 @@arg3])     [equalattr 2 @@arg4]) ]
+    entselect [ && (equaltype @@arg1) (&& (&& [equalattr 1 @@arg2] [equalattr 2 @@arg3])     [equalattr 3 @@arg4]) ]
   ] [ if (= $numargs 5) [
-    entselect [ && (equaltype @@arg1) (&& (&& [equalattr 0 @@arg2] [equalattr 1 @@arg3]) (&& [equalattr 2 @@arg4] [equalattr 3 @@arg5])) ]
+    entselect [ && (equaltype @@arg1) (&& (&& [equalattr 1 @@arg2] [equalattr 2 @@arg3]) (&& [equalattr 3 @@arg4] [equalattr 4 @@arg5])) ]
   ] [
-    entselect [ && (equaltype @@arg1) (&& (&& (&& [equalattr 0 @@arg2] [equalattr 1 @@arg3]) (&& [equalattr 2 @@arg4] [equalattr 3 @@arg5])) [equalattr 4 @@arg6]) ]
+    entselect [ && (equaltype @@arg1) (&& (&& (&& [equalattr 1 @@arg2] [equalattr 2 @@arg3]) (&& [equalattr 3 @@arg4] [equalattr 4 @@arg5])) [equalattr 5 @@arg6]) ]
   ]]]]]
 ]
 
@@ -196,7 +200,6 @@ editmovedrag   = [ editmovewith editdrag ]
 ////// Other Editing commands /////////
 
 editfacewentpush = [ 
-  
   if (|| [havesel] [! (enthavesel)] ) [
     if ($moving) [ 
       pushsel $arg1 
@@ -205,7 +208,7 @@ editfacewentpush = [
       editface $arg1 $arg2
     ] 
   ] [
-      if ($entmoving) [ entpush $arg1 ] [ ent_action_@(et) ]
+      if ($entmoving) [ entpush $arg1 ]
   ]
 ]
 
@@ -234,24 +237,6 @@ indict = [
   result $r
 ]
 
-entdirection = [
-  if ( && (enthavesel) [ = (havesel) 0 ] ) [
-    diridx = (indict (et) $entswithdirection -1)
-    if (>= $diridx 0) [
-      if (> $arg1 0) [
-        entproperty $diridx @@arg2
-        if (> (ea $diridx) 360) [ entproperty $diridx -360 ]          
-      ] [
-        entproperty $diridx -@@arg2
-        if (< (ea $diridx) 0) [ entproperty $diridx 360 ]
-      ]
-    ]
-    result 1
-  ] [
-    result 0
-  ]
-]
-
 editdel    = [ if (= (enthavesel) 0) [ delcube ] [ delent ] ]
 editflip   = [ if (= (enthavesel) 0) [ flip ] [ entflip ] ]
 
@@ -275,19 +260,6 @@ editcut    = [
       if ( ! $hadselection ) [ cancelsel ]
     ]
   ]
-]
-
-passthrough = [ 
-  passthroughsel $arg1; 
-  if ($arg1) [
-    passthroughcube_bak = $passthroughcube
-    passthroughcube 1
-  ] [
-    passthroughcube $passthroughcube_bak
-  ]
-  entcancel 
-  if ( setting_entediting ) [ entediting ( ! $arg1 ) ]
-  
 ]
 
 alias selectents [ entselect [&& (insel) (enttype $arg1)] ]
