better sunlighting method, sunlit forge
Former-commit-id: 3b37da79970a10c4addc2c4cf6befd00598b6e9b

--- a/data/maps/forge.cfg
+++ b/data/maps/forge.cfg
@@ -6,7 +6,7 @@
 // aircurb 25.0
 // ambient 0x101010
 // blurlms 0
-// blurskylight 0
+// blurskylight 2
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
@@ -55,7 +55,7 @@
 // lmshadows 1
 // mapauthor "LuckyStrike-Rx"
 // mapmusic ""
-maptitle "Forge"
+// maptitle "Forge"
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
@@ -69,7 +69,7 @@ maptitle "Forge"
 // skybox "penguins/wrath"
 // skycolour 0xFFFFFF
 // skyglare 1
-// skylight 0x3F3F3F
+// skylight 0x111111
 // skytexture 0
 // slopez 0.5
 // spincloudlayer 0.0
@@ -87,7 +87,7 @@ maptitle "Forge"
 // watersubdiv 3
 // yawcloudlayer 0
 // yawclouds 0
-// yawsky 0
+// yawsky 331
 
 "forge_intro" = [
 	announce (registersound "sfx/change" 255 "air" -1 -1 1) 1 "^fgMISSION: ^fycollect the ^faneutral ^fyflag in the center and take it to your base on the opposite side."
