staggered/random item spawns, ability for weapons to be assigned a triggerid for controlled spawning, did some s/secs/millisecs/ on some game vars
Former-commit-id: b994bfe19fde3fc354d16654358c3ea998535ad2

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -318,11 +318,11 @@ newgui game [
 					]
 					guistrut 1
 					guilist [
-						varfld botscale 8
-						varfld botminskill 8
-						varfld botmaxskill 8
+						varfld botscale 12
+						varfld botminskill 12
+						varfld botmaxskill 12
 					]
-					guistrut 1
+					guistrut 2
 					guilist [
 						guibutton (format "%1add bot" $cyan) [addbot] "team"
 						guibutton (format "%1del bot" $magenta) [delbot] "player"
@@ -391,32 +391,42 @@ newgui game [
 					vardef stffinish		"stf all finish"
 					vardef stfpoints		"stf points"
 					vardef stfoccupy		"stf occupy"
+					vardef spawnweapon		"spawn weapon"
+					vardef instaspawnweapon	"insta spawn weapon"
 				]
 				guistrut 1
 				guilist [
-					varfld selfdamage 12
-					varfld teamdamage 12
-					varfld maxhealth 12
-					varfld extrahealth 12
-					varfld maxcarry 12
-					varfld vampire 12
-					varfld regenguard 12
-					varfld regenhealth 12
-					varfld regenextra 12
-					varfld regenpenalty 12
-					varfld impulselength 12
-					varfld impulsejump 12
-					varfld itemsallowed 12
-					varfld itemdropping 12
-					varfld kamikaze 12
-					varfld fraglimit 12
-					varfld ctflimit 12
-					varfld ctfstyle 12
-					varfld ctfresetdelay 12
-					varfld stflimit 12
-					varfld stffinish 12
-					varfld stfpoints 12
-					varfld stfoccupy 12
+					varfld selfdamage 16
+					varfld teamdamage 16
+					varfld maxhealth 16
+					varfld extrahealth 16
+					varfld maxcarry 16
+					varfld vampire 16
+					varfld regenguard 16
+					varfld regenhealth 16
+					varfld regenextra 16
+					varfld regenpenalty 16
+					varfld impulselength 16
+					varfld impulsejump 16
+					varfld itemsallowed 16
+					varfld itemdropping 16
+					varfld kamikaze 16
+					varfld fraglimit 16
+					varfld ctflimit 16
+					varfld ctfstyle 16
+					varfld ctfresetdelay 16
+					varfld stflimit 16
+					varfld stffinish 16
+					varfld stfpoints 16
+					varfld stfoccupy 16
+					guilist [
+						guilist [ varfld spawnweapon 11 ]
+						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
+					]
+					guilist [
+						guilist [ varfld instaspawnweapon 11 ]
+						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
+					]
 				]
 			]
 		]
@@ -424,8 +434,6 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
-					vardef spawnweapon		"spawn weapon"
-					vardef instaspawnweapon	"insta spawn weapon"
 					vardef maprotate		"map rotation"
 					vardef spawnrotate		"spawn rotation"
 					vardef damagescale		"damage scale"
@@ -440,6 +448,8 @@ newgui game [
 					vardef intermlimit		"intermission"
 					vardef votelimit		"vote limit"
 					vardef itemspawntime	"item spawn time"
+					vardef itemspawndelay	"item spawn delay"
+					vardef itemspawnstyle	"item spawn style"
 					vardef regendelay		"regen delay"
 					vardef regentime		"regen time"
 					vardef spawnprotecttime	"spawn protect"
@@ -448,33 +458,27 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					guilist [
-						guilist [ varfld spawnweapon 7 ]
-						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
-					]
-					guilist [
-						guilist [ varfld instaspawnweapon 7 ]
-						guitext (format "%1%2" $gray (at $wepnames $instaspawnweapon))
-					]
-					varfld maprotate 12
-					varfld spawnrotate 12
-					varfld damagescale 12
-					varfld gravityscale 12
-					varfld jumpscale 12
-					varfld speedscale 12
-					varfld hitpushscale 12
-					varfld deadpushscale 12
-					varfld wavepusharea 12
-					varfld wavepushscale 12
-					varfld timelimit 12
-					varfld intermlimit 12
-					varfld votelimit 12
-					varfld itemspawntime 12
-					varfld regendelay 12
-					varfld regentime 12
-					varfld spawnprotecttime 12
-					varfld spawndelay 12
-					varfld instaspawndelay 12
+					varfld maprotate 16
+					varfld spawnrotate 16
+					varfld damagescale 16
+					varfld gravityscale 16
+					varfld jumpscale 16
+					varfld speedscale 16
+					varfld hitpushscale 16
+					varfld deadpushscale 16
+					varfld wavepusharea 16
+					varfld wavepushscale 16
+					varfld timelimit 16
+					varfld intermlimit 16
+					varfld votelimit 16
+					varfld itemspawntime 16
+					varfld itemspawndelay 16
+					varfld itemspawnstyle 16
+					varfld regendelay 16
+					varfld regentime 16
+					varfld spawnprotecttime 16
+					varfld spawndelay 16
+					varfld instaspawndelay 16
 				]
 			]
 			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
