some cleanups and impulse animation fixes
Former-commit-id: 749460eebc351eedcc6cb91d32bdd3eedc97a224

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -379,7 +379,7 @@ newgui game [
 					vardef regenextra		"regen extra"
 					vardef regenpenalty		"regen penalty"
 					vardef impulselength	"impulse length"
-					vardef impulsejump		"impulse jump"
+					vardef impulsecost		"impulse cost"
 					vardef itemsallowed		"items allowed"
 					vardef itemdropping		"item dropping"
 					vardef kamikaze			"kamikaze"
@@ -407,7 +407,7 @@ newgui game [
 					varfld regenextra 16
 					varfld regenpenalty 16
 					varfld impulselength 16
-					varfld impulsejump 16
+					varfld impulsecost 16
 					varfld itemsallowed 16
 					varfld itemdropping 16
 					varfld kamikaze 16
