(faster) impulse animations and swaying
Former-commit-id: ec8b09a600b6ab0ea0167d97bdfe0883d90fd2f6

--- a/data/models/actors/player/alpha/md5.cfg
+++ b/data/models/actors/player/alpha/md5.cfg
@@ -28,7 +28,11 @@ md5anim "backward" "../backward.md5anim" 8
 md5anim "left" "../left.md5anim" 8
 md5anim "right" "../right.md5anim" 8
 md5anim "jump" "../jump.md5anim" 8
-md5anim "impulse" "../jump.md5anim" 8
+md5anim "impulse forward" "../forward.md5anim" 16
+md5anim "impulse backward" "../backward.md5anim" 16
+md5anim "impulse left" "../left.md5anim" 16
+md5anim "impulse right" "../right.md5anim" 16
+md5anim "impulse dash" "../jump.md5anim" 16
 md5anim "sink" "../jump.md5anim" 8
 md5anim "swim" "../jump.md5anim" 8
 md5anim "crouch" "../crouch.md5anim" 2
