imported other resolutions from sauer to options menu
Former-commit-id: 94764e7104716232c0216b5b437785084950e6d0

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -827,6 +827,9 @@ newgui newteleport [
     guibutton "newent teledest 4"
 ]
 
+macro resbutton [
+    guibutton "%1x%2" "screenres %1 %2" (if (&& (= $scr_w %1) (= $scr_h %2)) [result "radioboxon"] [result "radiobox"])
+]
 
 newgui options [
 	guilist [
@@ -1061,40 +1064,77 @@ newgui options [
       guiradio "more verbose" showfps 3
     ]
     ]
+	
     guitab   "res"
-    guitext "field of view (default: 100)"
-    guislider (if $thirdperson [result "thirdpersonfov"] [result "firstpersonfov"])
-    guilist [
+    guistayopen [
+      guilist [
         guilist [
-            guibutton "320x240"              "screenres 320 240"
-            guibutton "640x480"              "screenres 640 480"
-            guibutton "800x600"              "screenres 800 600"
-            guibutton "1024x768"             "screenres 1024 768"
-            guibutton "1152x864"             "screenres 1152 864"
-            guibutton "1280x960"             "screenres 1280 960"
-            guibutton "1280x1024"            "screenres 1280 1024"
-            guibutton "1400x1050"            "screenres 1400 1050"
-            guibutton "1600x1200"            "screenres 1600 1200"
-            guibutton "1792x1344"            "screenres 1792 1344"
-            guibutton "1856x1392"            "screenres 1856 1392"
-            guibutton "1920x1440"            "screenres 1920 1440"
-            guibutton "2048x1536"            "screenres 2048 1536"
+            guitext "4:3"
+            @(resbutton 320 240)
+            @(resbutton 640 480)
+            @(resbutton 800 600)
+            @(resbutton 1024 768)
+            @(resbutton 1152 864)
+            @(resbutton 1280 960)
+            @(resbutton 1400 1050)
+            @(resbutton 1600 1200)
+            @(resbutton 1792 1344)
+            @(resbutton 1856 1392)
+            @(resbutton 1920 1440)
+            @(resbutton 2048 1536)
+            @(resbutton 2800 2100)
+            @(resbutton 3200 2400)
         ]
         guibar
         guilist [
-            guibutton "1024x640"             "screenres 1024 640"
-            guibutton "1280x720"             "screenres 1280 720"
-            guibutton "1280x768"             "screenres 1280 768"
-            guibutton "1280x800"             "screenres 1280 800"
-            guibutton "1440x900"             "screenres 1440 900"
-            guibutton "1600x1000"            "screenres 1600 1000"
-            guibutton "1680x1050"            "screenres 1680 1050"
-            guibutton "1920x1080"            "screenres 1920 1080"
-            guibutton "1920x1200"            "screenres 1920 1200"
-            guibutton "2048x1280"            "screenres 2048 1280"
-            guibutton "2560x1600"            "screenres 2560 1600"
-            guibutton "3840x2400"            "screenres 3840 2400"
+            guitext "16:10"
+            @(resbutton 320 200)
+            @(resbutton 640 400)
+            @(resbutton 1024 640)
+            @(resbutton 1280 800)
+            @(resbutton 1440 900)
+            @(resbutton 1600 1000)
+            @(resbutton 1680 1050)
+            @(resbutton 1920 1200)
+            @(resbutton 2048 1280)
+            @(resbutton 2560 1600)
+            @(resbutton 3840 2400)
         ]
+        guibar
+        guilist [
+            guitext "16:9"
+            @(resbutton 1024 600)
+            @(resbutton 1280 720)
+            @(resbutton 1366 768)
+            @(resbutton 1600 900)
+            @(resbutton 1920 1050)
+            @(resbutton 2048 1152)
+            @(resbutton 3840 2160)
+        ]
+        guibar
+        guilist [
+            guitext "5:4"
+            @(resbutton 600 480)
+            @(resbutton 1280 1024)
+            @(resbutton 1600 1280)
+            @(resbutton 2560 2048)
+        ]
+        guibar
+        guilist [
+            guitext "5:3"
+            @(resbutton 800 480)
+            @(resbutton 1280 768)
+            
+            guibar
+            guitext "Custom"
+            guilist [
+                customw = $scr_w
+                customh = $scr_h
+                guifield customw 4 [scr_w $customw]
+                guifield customh 4 [scr_h $customh]
+            ]
+        ]
+      ]
     ]
 
     guitab   "sound"
@@ -1168,9 +1208,9 @@ newgui options [
         ]
     ] [guibar]
 
-    guitab "autoexec.cfg"
-    guitext "autoexec.cfg"
-    showfileeditor "autoexec.cfg" -60 15
+    //guitab "autoexec.cfg"
+    //guitext "autoexec.cfg"
+    //showfileeditor "autoexec.cfg" -60 15
 ]
 
 bindactions = [forward backward left right jump crouch attack zoom reload action saycommand "weapon 0" "weapon 1" "weapon 2" "weapon 3" "weapon 4" "weapon 5" "universaldelta 1" "universaldelta -1" toggleedit]
