q009's ambient sounds (as 'sounds/ambience/morph')
Former-commit-id: 2514613194474977319b22ed68a916131743412a

--- a/data/package.cfg
+++ b/data/package.cfg
@@ -10,3 +10,4 @@ exec "kurt/package.cfg"
 
 exec "models/acord/package.cfg"
 exec "sounds/ambience/package.cfg"
+exec "sounds/ambience/morph/package.cfg"
