--- a/data/sounds/ambience/package.cfg
+++ b/data/sounds/ambience/package.cfg
@@ -1,39 +1,39 @@
-mapsound "sounds/ambience/alienwind" 255 "air"
-mapsound "sounds/ambience/blowwind" 255 "air"
-mapsound "sounds/ambience/cavedrip" 255 "air"
-mapsound "sounds/ambience/creek" 255 "air"
-mapsound "sounds/ambience/cycadas" 255 "air"
-mapsound "sounds/ambience/distant_cars" 255 "air"
-mapsound "sounds/ambience/dizzywind" 255 "air"
-mapsound "sounds/ambience/electro" 255 "air"
-mapsound "sounds/ambience/firelight" 255 "air"
-mapsound "sounds/ambience/forest1" 255 "air"
-mapsound "sounds/ambience/forest2" 255 "air"
-mapsound "sounds/ambience/forest3" 255 "air"
-mapsound "sounds/ambience/forestflies" 255 "air"
-mapsound "sounds/ambience/frogs" 255 "air"
-mapsound "sounds/ambience/hollowwind" 255 "air"
-mapsound "sounds/ambience/hum" 255 "air"
-mapsound "sounds/ambience/jumppad" 255 "air"
-mapsound "sounds/ambience/jumppad2" 255 "air"
-mapsound "sounds/ambience/lava1" 255 "air"
-mapsound "sounds/ambience/lava2" 255 "air"
-mapsound "sounds/ambience/lavarumble1" 255 "air"
-mapsound "sounds/ambience/lavarumble2" 255 "air"
-mapsound "sounds/ambience/machine1" 255 "air"
-mapsound "sounds/ambience/machine2" 255 "air"
-mapsound "sounds/ambience/nightcrickets" 255 "air"
-mapsound "sounds/ambience/pneumatic" 255 "air"
-mapsound "sounds/ambience/river" 255 "air"
-mapsound "sounds/ambience/switch" 255 "air"
-mapsound "sounds/ambience/teleport" 255 "air"
-mapsound "sounds/ambience/wastewind" 255 "air"
-mapsound "sounds/ambience/water" 255 "air"
-mapsound "sounds/ambience/waterfall" 255 "air"
-mapsound "sounds/ambience/waterfall2" 255 "air"
-mapsound "sounds/ambience/waterfall3" 255 "air"
-mapsound "sounds/ambience/waterfall_deep" 255 "air"
-mapsound "sounds/ambience/waterfall_huge" 255 "air"
-mapsound "sounds/ambience/waterfall_indoor" 255 "air"
-mapsound "sounds/ambience/waterfall_medium" 255 "air"
-mapsound "sounds/ambience/wind" 255 "air"
+mapsound "sounds/ambience/alienwind"
+mapsound "sounds/ambience/blowwind"
+mapsound "sounds/ambience/cavedrip"
+mapsound "sounds/ambience/creek"
+mapsound "sounds/ambience/cycadas"
+mapsound "sounds/ambience/distant_cars"
+mapsound "sounds/ambience/dizzywind"
+mapsound "sounds/ambience/electro"
+mapsound "sounds/ambience/firelight"
+mapsound "sounds/ambience/forest1"
+mapsound "sounds/ambience/forest2"
+mapsound "sounds/ambience/forest3"
+mapsound "sounds/ambience/forestflies"
+mapsound "sounds/ambience/frogs"
+mapsound "sounds/ambience/hollowwind"
+mapsound "sounds/ambience/hum"
+mapsound "sounds/ambience/jumppad"
+mapsound "sounds/ambience/jumppad2"
+mapsound "sounds/ambience/lava1"
+mapsound "sounds/ambience/lava2"
+mapsound "sounds/ambience/lavarumble1"
+mapsound "sounds/ambience/lavarumble2"
+mapsound "sounds/ambience/machine1"
+mapsound "sounds/ambience/machine2"
+mapsound "sounds/ambience/nightcrickets"
+mapsound "sounds/ambience/pneumatic"
+mapsound "sounds/ambience/river"
+mapsound "sounds/ambience/switch"
+mapsound "sounds/ambience/teleport"
+mapsound "sounds/ambience/wastewind"
+mapsound "sounds/ambience/water"
+mapsound "sounds/ambience/waterfall"
+mapsound "sounds/ambience/waterfall2"
+mapsound "sounds/ambience/waterfall3"
+mapsound "sounds/ambience/waterfall_deep"
+mapsound "sounds/ambience/waterfall_huge"
+mapsound "sounds/ambience/waterfall_indoor"
+mapsound "sounds/ambience/waterfall_medium"
+mapsound "sounds/ambience/wind"
