s/last-man/survivor/
Former-commit-id: 0830386b0c55c8c4c38a91ef6ffd7dbdb246c20a

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -19,7 +19,7 @@ exec "sounds.cfg"
 //		0x0002	Team
 //		0x0004	Instagib
 //		0x0008	Duel
-//		0x0010	Last-Man-Standing
+//		0x0010	Survivor
 //		0x0020	Arena
 
 mapcomplete			= [ complete $arg1 maps bgz ]
@@ -53,9 +53,9 @@ instactf			= [ start $arg1 6 0x0006 ]; mapcomplete instactf
 duel				= [ start $arg1 4 0x0008 ]; mapcomplete duel
 duelarena			= [ start $arg1 4 0x0028 ]; mapcomplete duelarena
 instaduel			= [ start $arg1 4 0x000C ]; mapcomplete instaduel
-lms					= [ start $arg1 4 0x0010 ]; mapcomplete lms
-lmsarena			= [ start $arg1 4 0x0030 ]; mapcomplete lmsarena
-instalms			= [ start $arg1 4 0x0014 ]; mapcomplete instalms
+survivor			= [ start $arg1 4 0x0010 ]; mapcomplete survivor
+survivorarena		= [ start $arg1 4 0x0030 ]; mapcomplete survivorarena
+instasurvivor		= [ start $arg1 4 0x0014 ]; mapcomplete instasurvivor
 
 toggleedit			= [ if (= (gamemode) 2) [ edittoggle ] [ edit $mapname ] ] 
 
