--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -301,7 +301,7 @@ newgui game [
 							guibitfield "arena"						mutsselected 0x0020
 							if (= $modeselected 4) [
 								guibitfield "duel"						mutsselected 0x0008
-								guibitfield "last-man"					mutsselected 0x0010
+								guibitfield "survivor"					mutsselected 0x0010
 							] [ guistrut 2 ]
 						] [ guistrut 5 ]
 						mutsselected = (mutscheck $modeselected $mutsselected)
