luckystrike's vwep anims
Former-commit-id: 57e4250801485129b78bc5b965b5c3cc9d162bf7

--- a/data/models/actors/player/vwep/md5.cfg
+++ b/data/models/actors/player/vwep/md5.cfg
@@ -9,7 +9,7 @@ md5pitch "" 1
 
 md5anim "idle" "../vwep_p_idle.md5anim" 1
 md5anim "pain" "../vwep_p_idle.md5anim" 1
-md5anim "switch" "../vwep_p_reload.md5anim" 30
+md5anim "switch" "../vwep_p_switch.md5anim" 30
 md5anim "plasma" "../vwep_p_idle.md5anim" 1
 md5anim "plasma shoot" "../vwep_p_shoot.md5anim" 50
 md5anim "plasma reload" "../vwep_p_reload.md5anim" 30
