more light/blendmap tweaking
Former-commit-id: 8d105a2e8df61d716731cc9716ab0d79bfeaee77

--- a/data/maps/venus.cfg
+++ b/data/maps/venus.cfg
@@ -35,7 +35,7 @@
 // fogcolour 0xCCCCCC
 // grassanimmillis 3000
 // grassanimscale 0.03
-// grassheight 4
+// grassheight 6
 // grassscale 2
 // gravity 50.0
 // impulsespeed 50.0
@@ -69,7 +69,7 @@
 // skybox "skyboxes/grey"
 // skycolour 0xFFFFFF
 // skyglare 1
-// skylight 0x404040
+// skylight 0xAAAAAA
 // skytexture 1
 // slopez 0.5
 // spincloudlayer 0.0
@@ -2766,7 +2766,7 @@ texture z "acord/marsrockz.jpg"
 
 setshader bumpspecmapworld
 setshaderparam "specscale" 2.000000 2.000000 2.000000 0.000000
-texture c "<mad:1.25/1.50/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 1.000000 // 446
+texture c "<mad:1.15/1.55/0.90>mitaman/mm-grassdead42.jpg" 1 0 0 1.000000 // 446
 texture n "mitaman/mm-grassdead42_normal.jpg"
 texture s "mitaman/mm-grassdead42_spec.jpg"
 texlayer 165
