--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -88,6 +88,8 @@ delta_edit_17		= [ entproperty 7 $arg1 ]; setcomplete delta_edit_17 off
 delta_edit_18		= [ entproperty 8 $arg1 ]; setcomplete delta_edit_18 off
 delta_edit_19		= [ entproperty 9 $arg1 ]; setcomplete delta_edit_19 off
 
+// actions: attack = 0, alternate = 1, reload = 2, use = 3, jump = 4, impulse = 5, crouch = 6
+
 bind W				[ forward ]
 bind A				[ left ]
 bind S				[ backward ]
@@ -98,22 +100,22 @@ bind DOWN			[ backward ]
 bind RIGHT			[ right ]
 bind LEFT			[ left ]
 
-bind LSHIFT			[ impulse ]
-bind LCTRL			[ crouch ]
-bind SPACE			[ jump ]
+bind LSHIFT			[ action 5 ]
+bind LCTRL			[ action 6 ]
+bind SPACE			[ action 4 ]
 
-bind MOUSE1			[ attack ]
-bind MOUSE2 		[ zoom ]
-bind MOUSE3			[ reload ]
+bind MOUSE1			[ action 0 ]
+bind MOUSE2 		[ action 1 ]
+bind MOUSE3			[ action 2 ]
 
 bind I				[ taunt ]
-bind E				[ action ]
-bind R				[ reload ]
-bind F				[ action ]
+bind E				[ action 3 ]
+bind R				[ action 2 ]
+bind F				[ action 1 ]
 bind Z				[ drop ]
 bind X				[ dropflag ]
-bind C				[ crouch ]
-bind V				[ zoom ]
+bind C				[ action 6 ]
+bind V				[ action 1 ]
 bind G				[ weapon 6 ]
 bind Q				[ weapon 6 ]
 bind K				[ kill ]
