make skyboxglare shader preserve alpha channel
Former-commit-id: 05b2fe91472d4f2aab18c905acc59fc70c6b9d8e

--- a/data/stdshader.cfg
+++ b/data/stdshader.cfg
@@ -2826,7 +2826,8 @@ shader 0 "skyboxglare" [
     //MUL intensity, intensity, 32;
     //MUL glare, glare, intensity;
     // ^ all folded into single dot product below
-    DP4 result.color, glare, { 10.56, 10.88, 10.56, -30.4 }; 
+    DPH result.color.rgb, glare, { 10.56, 10.88, 10.56, -30.4 }; 
+    MOV result.color.a, glare.a; 
     END
 ]
 
