--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -200,7 +200,7 @@ newgui name [
 	]
 ]
 
-wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" " grenade"] //make them all the same size
+wepnames = [ "  pistol" " shotgun" "     smg" "  flamer" "  plasma" "   rifle" " grenade" "   insta"] //make them all the same size
 
 newgui arena [
 	guilist [
