put wall kick et al on a different key
Former-commit-id: 6610ee4f75e87b7d7f9ff05db05162b1150da31b

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -88,7 +88,7 @@ delta_edit_17		= [ entproperty 7 $arg1 ]; setcomplete delta_edit_17 off
 delta_edit_18		= [ entproperty 8 $arg1 ]; setcomplete delta_edit_18 off
 delta_edit_19		= [ entproperty 9 $arg1 ]; setcomplete delta_edit_19 off
 
-// actions: attack = 0, alternate = 1, reload = 2, use = 3, jump = 4, impulse = 5, crouch = 6
+// actions: attack = 0, alternate = 1, reload = 2, use = 3, jump = 4, impulse = 5, crouch = 6, special = 7
 
 bind W				[ forward ]
 bind A				[ left ]
@@ -116,7 +116,7 @@ bind X				[ dropflag ]
 bind C				[ action 6 ]
 bind V				[ action 1 ]
 bind G				[ weapon 6 ]
-bind Q				[ weapon 6 ]
+bind Q				[ action 7 ]
 bind K				[ kill ]
 
 bind TAB			[ showscores ]
