--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -110,9 +110,9 @@ bind MOUSE3			[ action 2 ]
 
 bind E				[ action 3 ]
 bind R				[ action 2 ]
-bind F				[ action 1 ]
+bind F				[ action 7 ]
 bind Z				[ drop ]
-bind X				[ dropflag ]
+bind X				[ action 5 ]
 bind C				[ action 6 ]
 bind V				[ action 1 ]
 bind G				[ weapon 6 ]
