rudimentary race gametype, checkpoints support
Former-commit-id: 9745807cd21178fa5aa29fb9922432b3b57c1003

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -14,6 +14,7 @@ exec "sounds.cfg"
 //		4		Deathmatch
 //		5		Secure-the-Flag
 //		6		Capture-the-Flag
+//		7		Race
 // Mutators (bitwise and):
 //		0x0001	Multi-Sided
 //		0x0002	Team
@@ -56,6 +57,9 @@ instaduel			= [ start $arg1 4 0x000C ]; mapcomplete instaduel
 survivor			= [ start $arg1 4 0x0010 ]; mapcomplete survivor
 survivorarena		= [ start $arg1 4 0x0030 ]; mapcomplete survivorarena
 instasurvivor		= [ start $arg1 4 0x0014 ]; mapcomplete instasurvivor
+race				= [ start $arg1 7 0x0000 ]; mapcomplete race
+racearena			= [ start $arg1 7 0x0020 ]; mapcomplete racearena
+instarace			= [ start $arg1 7 0x0004 ]; mapcomplete instarace
 
 toggleedit			= [ if (= (gamemode) 2) [ edittoggle ] [ edit $mapname ] ] 
 
