--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -225,7 +225,7 @@ newgui arena [
 	]
 ]
 
-maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
+maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps racemaps racemaps ]
 maplistsize = 22 //adjust if desired
 mapindex = 0
 maplist = ""
@@ -290,6 +290,7 @@ newgui game [
 						guiradio "deathmatch"					modeselected 4
 						guiradio "secure-the-flag"				modeselected 5
 						guiradio "capture-the-flag"				modeselected 6
+						guiradio "race"							modeselected 7S
 						if (>= $modeselected 3) [
 							guistrut 1
 							guititle "mutators"
