--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -114,7 +114,7 @@ texture z "acord/flatz.jpg"
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.75/0.75>trak4/concrete5a.jpg" 0 0 0 0.500000 // 3
 texture n "trak4/concrete5_nm.png"
-texture s "<mad:0.0625/0.0625/0.0625>trak4/concrete5_s.jpg"
+texture s "<mad:0.0625/0.0625/0.0625>textures/blank"
 
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.75/0.75>trak4/trim1.jpg" 0 0 0 0.250000 // 4
@@ -137,7 +137,7 @@ texture n "trak6/tile3_nm.png"
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.6/0.6/0.6>trak4/concrete5a.jpg" 0 0 0 0.500000 // 7
 texture n "trak4/concrete5_nm.png"
-texture s "trak4/concrete5_s.jpg"
+texture s "<mad:0.0625/0.0625/0.0625>textures/blank"
 
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.75/0.75>trak4/trim1.jpg" 1 0 0 0.250000 // 8
