flags for death material frags, obitdeath/obitwater world vars
Former-commit-id: 603ccf8714bd2a612a1ab553cc4d2adad7ead315

--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -88,6 +88,8 @@
 // yawcloudlayer 0
 // yawclouds 0
 // yawsky 0
+obitwater "sucked on slime"
+obitdeath "died a horrible death"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
