a few little fixes
Former-commit-id: 4c31c641d9a0917fcf291c0a90fe342216ef0c1b

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -189,31 +189,45 @@ editbind C			[ domodifier 9 ]
 editbind INSERT 	[ sendmap ]
 editbind DELETE		[ getmap ]
 
-editbind LSHIFT		[ floatspeed 300; modscale = 10; onrelease [ floatspeed 75; modscale = 1; ] ]
-editbindmod LCTRL	[ passthroughsel 1; passthroughcube 1; onrelease [ passthroughsel 0; passthroughcube 0 ] ]
+editfloatspeed = 350
+editmodscale = 10
+floatspeed_bak = 75
+editshift = [
+	if (= $arg1 1) [
+		floatspeed_bak = $floatspeed
+		floatspeed $editfloatspeed
+		modscale = $editmodscale
+	] [
+		floatspeed $floatspeed_bak
+		modscale = 1
+	]
+]
+editbind LSHIFT		[ editshift 1; onrelease [ editshift 0 ] ]
+
+passthroughsel_bak = 0
+passthroughcube_bak = 0
+passthrough = [
+	if (= $arg1 1) [
+		passthroughsel_bak = $passthroughsel
+		passthroughcube_bak = $passthroughcube
+		passthroughsel 1; passthroughcube 1
+	] [
+		passthroughsel $passthroughsel_bak
+		passthroughcube $passthroughcube_bak
+	]
+	entcancel
+]
+editbind LCTRL		[ passthrough 1; onrelease [ passthrough 0 ] ]
 editbind LALT		[ hmapedit; blendpaintmode 0 ]
 
-gridbindstyle = 2
 gridbindswitch = 0
 togglegridbind = [
-	if (= $gridbindstyle 2) [
-		if (= $gridbindswitch 3) [ showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0 ] [
-			if (= $gridbindswitch 2) [ showpastegrid 0; showcursorgrid 0; showselgrid 1; gridbindswitch = 3 ] [
-				if (= $gridbindswitch 1) [ showpastegrid 0; showcursorgrid 1; showselgrid 0; gridbindswitch = 2 ] [
-					if (= $gridbindswitch 0) [ showpastegrid 1; showcursorgrid 0; showselgrid 0; gridbindswitch = 1 ]
-				]
+	if (= $gridbindswitch 3) [ showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0 ] [
+		if (= $gridbindswitch 2) [ showpastegrid 0; showcursorgrid 0; showselgrid 1; gridbindswitch = 3 ] [
+			if (= $gridbindswitch 1) [ showpastegrid 0; showcursorgrid 1; showselgrid 0; gridbindswitch = 2 ] [
+				if (= $gridbindswitch 0) [ showpastegrid 1; showcursorgrid 0; showselgrid 0; gridbindswitch = 1 ]
 			]
 		]
-	]
-	if (= $gridbindstyle 1) [
-		if (= $gridbindswitch 1) [
-			showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0
-		] [
-			showpastegrid 1; showcursorgrid 1; showselgrid 1; gridbindswitch = 1
-		]
-	]
-	if (= $gridbindstyle 0) [
-		showpastegrid 1; showcursorgrid 1; showselgrid 1; onrelease [ showpastegrid 0; showcursorgrid 0; showselgrid 0 ]
 	]
 ]
 editbind TAB 		[ togglegridbind ]
@@ -226,7 +240,7 @@ bind RIGHTBRACKET	[ universaldelta -1 ]
 editbind SPACE  	[ cancelsel ]
 editbind MOUSE1		[ if $blendpaintmode paintblendmap editdrag ]
 editbind MOUSE3		[ selcorners ]
-editbind MOUSE2		[ if $blendpaintmode rotateblendbrush editextend]
+editbind MOUSE2		[ if $blendpaintmode rotateblendbrush editextend ]
 
 editbind N       	[ entselect insel ]
 editbind M       	[ selentfindall ]
