--- a/data/maps/testchamber.cfg
+++ b/data/maps/testchamber.cfg
@@ -5,7 +5,7 @@
 // adaptivesample 1
 // aircurb 25.0
 // ambient 0x191919
-// blurlms 2
+// blurlms 0
 // blurskylight 0
 // bumperror 3
 // causticscale 100
@@ -49,7 +49,7 @@
 // lightcompress 3
 // lighterror 8
 // lightlod 0
-// lightprecision 32
+// lightprecision 28
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
@@ -60,6 +60,8 @@
 // mmskylight 1
 // movespeed 50.0
 // numplayers 0
+// obitdeath "died a horrible death"
+// obitwater "sucked on slime"
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
@@ -88,8 +90,6 @@
 // yawcloudlayer 0
 // yawclouds 0
 // yawsky 0
-obitwater "sucked on slime"
-obitdeath "died a horrible death"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
@@ -145,6 +145,20 @@ setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.75/0.75>trak4/trim1.jpg" 1 0 0 0.250000 // 8
 texture n "trak4/trim1_nm.png"
 texture s "<mad:0.0625/0.0625/0.0625>trak4/trim1_s.jpg"
+
+setshader bumpspecmapparallaxworld
+texture c "<mad:0.55/0.55/0>acord/danger.jpg" 1 32 0 0.250000 // 9
+texture n "acord/flatn.jpg"
+texture s "<mad:0.035/0.035/0.025>textures/blank"
+texture z "acord/flatz.jpg"
+
+setshader bumpspecmapparallaxglowworld
+setshaderparam "specscale" 1.000000 1.000000 1.000000 0.000000
+setshaderparam "parallaxscale" 0.040000 -0.020000 0.000000 0.000000
+texture c "<mad:0.75/0.75/0.75>trak5/light2a.jpg" 0 0 0 0.500000 // 10
+texture n "trak5/light2_n.png"
+texture s "trak5/light2_s.jpg"
+texture g "<mad:0.5/0.5/0.5>trak5/light2a_g.jpg"
 
 mmodel "acord/acbush0"
 mmodel "acord/acbush1"
